# AI-Assistant

./: .env.example  .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt  skills.md
config/: briefing_profile.json  narration_phrases.json  news_quality.json  skills_catalog.json  sources.json
data/: narration_history.json
docs/screenshots/: .gitkeep
launchd/: com.prasad.morningbriefs.plist
logs/: briefing_2026-04-13_123548_diagnostics.json  briefing_2026-04-13_124043_diagnostics.json  briefing_2026-04-13_130350_diagnostics.json  briefing_2026-04-13_144132_diagnostics.json  briefing_2026-04-13_144926_diagnostics.json  briefing_2026-04-13_145443_diagnostics.json  briefing_2026-04-13_152242_diagnostics.json  briefing_2026-04-13_160254_diagnostics.json
morning_briefs/: __init__.py  audio_fx.py  browser.py  cli.py  collector.py  config.py  dashboard.py  extractor.py  followup.py  intel_data.py  llm.py  models.py  music.py  narration.py  paths.py  pipeline.py  quality.py  server.py  tts.py  utils.py  weather.py  writer.py
morning_briefs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
morning_briefs/skills/: __init__.py  base.py  geopolitics.py  markets.py  technology_ai.py
morning_briefs/skills/subskills/: __init__.py  geopolitical.py  (+2 more)
output/: latest_result.json
output/scripts/: first_openai_call_payload_latest.txt
scripts/: apply_preset_filter.py  audio_test.py  install_launchd.sh  open_dashboard.sh  render_dashboard_fixture.py  run_daily.sh  sample_narration.py
tests/: test_pipeline_contracts.py  test_utils.py
(+5 files in other folders)
